LLM4Config/assets/wikimedia_k8s-controller-sidecars.yaml
---
# Source: k8s-controller-sidecars/templates/networkpolicy.yaml.tpl
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:  
  name: k8s-controller-sidecars-my-k8s-controller-sidecars
  labels:
    app: k8s-controller-sidecars
    chart: k8s-controller-sidecars-0.0.5
    release: my-k8s-controller-sidecars
    heritage: Helm
spec:
  types:
    - Egress
  selector: app == "k8s-controller-sidecars" && release == "my-k8s-controller-sidecars"
  # Allow accessing the K8s API.
  egress:
    - action: Allow
      destination:
        services:
          name: kubernetes
          namespace: default
